Change runtime java to 11 (#448)
* Change runtime java to 11

Signed-off-by: Stanislav Knot <sknot@redhat.com>

* cmnt

Signed-off-by: Stanislav Knot <sknot@redhat.com>